# showreel

./: .gitignore  README.md
showreel_server/: .env  cert.pem  key.pem  pyproject.toml  requirements.txt  showreel.py
showreel_server/app/api/: clip.py  reel.py  views.py
showreel_server/app/models/: clips.json  database.py  schemas.py
showreel_server/tests/: test_app.py
showreel_ui/: README.md  package-lock.json  package.json
showreel_ui/src/: App.vue
showreel_ui/src/components/: Main.vue
