[tool.poetry]
name = "showreel_server"
version = "0.1.0"
description = ""
authors = ["Gerald Lau <gerald.lau@accellion.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
pydantic = "^1.8.2"
pytest = "^6.2.5"
Flask-Cors = "^3.0.10"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
